fix css spacing

--- a/app/assets/stylesheets/extra.css.scss
+++ b/app/assets/stylesheets/extra.css.scss
@@ -9,10 +9,7 @@
   margin: 0;
 }
 
-.col-md-4 {
-  margin-left: 10px !important;
-  margin-right: 0px;
-}
+
 
 .content {
   padding: 40px, 20px, 20px, 20px;
